EXTRA_DIST=CDG_partition.png panda_flow.png ToC_CallPandAActivityDiagram.jpg \
           ToC_DataFlowSequenceDiagram.jpg gcc_schema.png SDG_partition.png  \
           ToC_CreateRawActivityDiagram.jpg  ToC_UMLUseCaseDiagram.jpg bambu_methodology.png hls_flow.png       

.PHONY documentation: documentation-recursive
.PHONY documentation-tag:documentation-tag-recursive
documentation: 
documentation-tag:
